--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,13 @@
 /* Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Poppins:wght@400;600;800&display=swap');
 
 /* Global styling */
 body {
-  margin: 0;
-  font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #181818;
-  color: #fff;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.125rem;
+  margin: 0;
 }
 
 code {
@@ -23,4 +22,8 @@ a {
   user-select: none;
   -webkit-user-select: none; /*Safari*/
   -moz-user-select: none; /*Firefox*/
+}
+
+.disabled {
+  cursor: not-allowed;
 }
