--- a/src/App.css
+++ b/src/App.css
@@ -34,12 +34,14 @@ section {
   margin: 0 auto;
 }
 
-.dark-page {
-  background-color: #181818;
-  color: #fff;
+.light-page {
+  background-color: var(--bs-white);
+  color: var(--bs-dark);
 }
 
-
+.test {
+  background-color: #ff00cc;
+}
 
 
 
@@ -51,9 +53,9 @@ section {
 }
 
 #nav {
-  background: #00c6ff;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: var(--bs-primary);  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, var(--bs-primary), #ff00cc);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, var(--bs-primary), #ff00cc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .nav-list {
@@ -67,7 +69,7 @@ section {
 
 .nav-list a {
   display: block;
-  color: #fff;
+  color: var(--bs-white);
   font-weight: 600;
 }
 
@@ -89,11 +91,7 @@ section {
   padding: 0 0 3rem;
 }
 
-.title-buttons {
-  padding-bottom: 50px;
-}
-
-.title-buttons a {
+.title-button-space {
   margin-right: 1rem;
 }
 
@@ -132,6 +130,12 @@ section {
   font-size: 0.75rem;
   font-weight: 800;
   text-transform: uppercase;
+  margin-top: 8px;
+  color: var(--bs-blue);
+}
+
+.post-badges .badge {
+  margin-right: 6px;
 }
 
 .project-page-section h2:not(:first-child) {
@@ -144,7 +148,7 @@ section {
 
 .project-page-card {
   background-color: #181818;
-  color: #fff;
+  color: var(--bs-white);
   padding: 24px 36px;
   margin-top: 24px;
 }
