--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 1.125rem;
   margin: 0;
+  background-color: #181818;
+  color: var(--bs-white);
 }
 
 code {
